<resources>
    <string name="app_name">My Finance Manager 2</string>

    <!-- item_card strings -->
    <string name="item_card_number_stars">**** **** ****</string>
    <string name="item_card_blank"> </string>

    <!-- item_transaction strings -->
    <string name="transaction_payment">Payment:</string>
    <string name="transaction_balance">Balance:</string>
    <string-array name="transaction_category">
        <item>Products</item>
        <item>Car</item>
        <item>Home</item>
        <item>Mobile</item>
        <item>Entertainment</item>
        <item>Other</item>
    </string-array>

    <!--Menu card collection strings -->
    <string name="menu_add_description">Add new card</string>
    <string name="menu_add_title">Add</string>

    <!-- Menu transactions strings -->
    <string name="menu_delete__card_description">Delete card</string>
    <string name="menu_delete_card_title">Delete card</string>
    <string name="menu_edit_card_description">Edit card</string>
    <string name="menu_edit_card_title">Edit card</string>

    <!-- Menu transactions_edit_card -->
    <string name="menu_confirm_description">Confirm</string>
    <string name="menu_confirm_title">Confirm</string>
    <string name="menu_cancel_description">Cancel</string>
    <string name="menu_cancel_title">Cancel</string>

    <!-- CreateCardActivity strings -->
    <string name="create_card_name">Card name:</string>
    <string name="create_card_name_hint">Enter the card name</string>
    <string name="create_card_number">Card number:</string>
    <string name="create_card_number_hint">Enter the card number</string>
    <string name="create_card_sms_path">SMS path:</string>
    <string name="create_card_sms_path_button">Path</string>
    <string name="create_card_currency">Currency:</string>
    <string-array name="create_card_currency_list">
        <item>BYN</item>
        <item>EUR</item>
        <item>USD</item>
    </string-array>
    <string name="create_card_balance">Balance:</string>
    <string name="create_card_balance_hint">Enter the card balance</string>
    <string name="create_card_submit">Submit</string>
    <string name="toast_card_created">Card created!</string>
    <string name="toast_card_non_created">Card didn\'t created, fill in the fields...</string>

    <!-- TransactionsFragment strings -->
    <string name="fab_description">Add new transaction</string>

    <!-- NewTransactionFragment strings -->
    <string name="new_transaction_select_date">Date/Time:</string>
    <string name="new_transaction_date">Pick a date</string>
    <string name="new_transaction_payment">Payment:</string>
    <string name="new_transaction_payment_hint">Enter a payment</string>
    <string name="new_transaction_balance">Balance:</string>
    <string name="new_transaction_balance_hint">Enter a balance</string>
    <string name="new_transaction_location">Location:</string>
    <string name="new_transaction_location_hint">Enter a location</string>
    <string name="new_transaction_category">Category:</string>
    <string name="new_transaction_add_button">Submit</string>
    <string name="new_transaction_empty_toast">Fill in all the fields</string>

    <string name="new_transaction_at">AT</string>

    <!-- DatePickerFragment strings -->
    <string name="date_dialog_title">Pick date and time</string>
    <string name="date_dialog_add_button">Add</string>

    <!-- DeleteCardDialog strings -->
    <string name="delete_card_dialog_title">Delete card</string>
    <string name="delete_card_dialog_text">Confirm card deleting</string>
    <string name="delete_card_dialog_delete_button">Delete</string>
    <string name="delete_card_dialog_cancel_button">Cancel</string>

</resources>