<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        tools:text="Select date:"
        android:text="@string/new_transaction_select_date"/>
    <Button
        android:id="@+id/new_transaction_date"
        android:layout_width="wrap_content"
        android:layout_columnWeight="2"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginEnd="3dp" />
    <Button
        android:id="@+id/new_transaction_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        tools:text="Payment:"
        android:text="@string/new_transaction_payment" />
    <EditText
        android:id="@+id/new_transaction_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:inputType="numberDecimal"
        android:hint="@string/new_transaction_payment_hint"
        tools:hint="145.08"
        android:importantForAutofill="no"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        tools:text="Balance:"
        android:text="@string/new_transaction_balance" />
    <EditText
        android:id="@+id/new_transaction_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:inputType="numberDecimal"
        android:hint="@string/new_transaction_balance_hint"
        tools:hint="2577.08"
        android:importantForAutofill="no"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        tools:text="Location:"
        android:text="@string/new_transaction_location" />
    <EditText
        android:id="@+id/new_transaction_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:inputType="text"
        android:hint="@string/new_transaction_location_hint"
        tools:hint="TC KORONA / MINSK"
        android:importantForAutofill="no"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        tools:text="Category:"
        android:text="@string/new_transaction_category" />
    <Spinner
        android:id="@+id/new_transaction_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="2"
        android:entries="@array/transaction_category" />

    <Button
        android:id="@+id/new_transaction_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:text="@string/new_transaction_add_button" />

</GridLayout>